--- a/index.html
+++ b/index.html
@@ -56,42 +56,42 @@
     <section class="social__bottom">
 
       <!-- Testimonial 1 -->
-      <blockquote class="social__testimonial">
+      <figure class="social__testimonial">
 
-        <cite class="social__testimonial__author">
+        <figcaption class="social__testimonial__author">
           <img src="images/image-colton.jpg" alt="A photograph of Colton Smith" class="testimonial__author__img">
           <p class="author__info">Colton Smith<span class="author__info__tag">Verified Buyer</span></p>
-        </cite>
+        </figcaption>
 
-        <p class="social__testimonial__quote">"We needed the same printed design as the one we had ordered a week prior. Not only did they find the original order, but we also received it in time. Excellent!"</p>
+        <blockquote class="social__testimonial__quote">"We needed the same printed design as the one we had ordered a week prior. Not only did they find the original order, but we also received it in time. Excellent!"</blockquote>
 
-      </blockquote>
+      </figure>
 
 
       <!-- Testimonial 2 -->
-      <blockquote class="social__testimonial">
+      <figure class="social__testimonial">
 
-        <cite class="social__testimonial__author">
+        <figcaption class="social__testimonial__author">
           <img src="images/image-irene.jpg" alt="A photograph of Colton Smith" class="testimonial__author__img">
           <p class="author__info">Irene Roberts<span class="author__info__tag">Verified Buyer</span></p>
-        </cite>
+        </figcaption>
         
-        <p class="social__testimonial__quote">"Customer service is always excellent and very quick turn around. Completely delighted with the simplicity of the purchase and the speed of delivery."</p>
+        <blockquote class="social__testimonial__quote">"Customer service is always excellent and very quick turn around. Completely delighted with the simplicity of the purchase and the speed of delivery."</blockquote>
 
-      </blockquote>
+      </figure>
 
 
       <!-- Testimonial 3 -->
-      <blockquote class="social__testimonial">
+      <figure class="social__testimonial">
 
-        <cite class="social__testimonial__author">
+        <figcaption class="social__testimonial__author">
           <img src="images/image-anne.jpg" alt="A photograph of Colton Smith" class="testimonial__author__img">
           <p class="author__info">Anne Wallace<span class="author__info__tag">Verified Buyer</span></p>
-        </cite>
+        </figcaption>
         
-        <p class="social__testimonial__quote">"Put an order with this company and can only praise them for the very high standard. Will definitely use them again and recommend them to everyone!"</p>
+        <blockquote class="social__testimonial__quote">"Put an order with this company and can only praise them for the very high standard. Will definitely use them again and recommend them to everyone!"</blockquote>
 
-      </blockquote>
+      </figure>
 
 
     </section>
